--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,10 +1,10 @@
+ext.kotlin_version = '2.0.0' 
 allprojects {
     repositories {
         google()
         mavenCentral()
     }
 }
-
 rootProject.buildDir = '../build'
 subprojects {
     project.buildDir = "${rootProject.buildDir}/${project.name}"
