--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,15 +28,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cloud_firestore: ^4.17.3
+  cloud_firestore: ^5.1.0
   connectivity: ^3.0.6
   cupertino_icons: ^1.0.6
-  firebase_auth: ^4.19.5
-  firebase_core: ^2.31.0
+  firebase_auth: ^5.1.2
+  firebase_core: ^3.2.0
+  firebase_messaging: ^15.0.3
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.5.1
+  flutter_secure_storage: ^9.2.2
   geolocator: ^12.0.0
+  go_router: ^14.2.0
   permission_handler: ^11.3.1
+  riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_lints: ^3.0.0
